--- a/client/src/app/components/auth/signup/signup.component.html
+++ b/client/src/app/components/auth/signup/signup.component.html
@@ -1,13 +1,44 @@
-<div class="form-wrapper">
-  <form [formGroup]="signupForm" (ngSubmit)="onSubmit()" class="form">
-    <mat-form-field>
-      <input matInput formControlName="email" type="email" placeholder="Email" required>
-    </mat-form-field>
+<div fxLayout="row">
+
+  <div class="image-wrapper" fxFlex="80">
+    <div class="motto" fxLayout="row">
+      <p>
+        Business is like a chess match. <br>
+        Let us help you to remember and foresee each step.
+      </p>
+    </div>
+  </div>
+
+  <div class="right-panel" fxFlex="20">
+    <div>
+      <h3>
+        Login to your CRM account
+      </h3>
+    </div>
+    <form [formGroup]="signupForm" (ngSubmit)="onSubmit()" fxLayout="column">
+      <mat-form-field>
+        <input matInput formControlName="email" type="email" placeholder="Email" required>
+      </mat-form-field>
+    
+      <mat-form-field>
+        <input matInput formControlName="password" type="password" placeholder="Password" required>
+      </mat-form-field>
+
+      <div class="controls" fxLayout="row">
+        <button mat-flat-button color="primary" [disabled]="signupForm.invalid" fxFlex="40">
+          Sign in
+        </button>
   
-    <mat-form-field>
-      <input matInput formControlName="password" type="password" placeholder="Password" required>
-    </mat-form-field>
-  
-    <button mat-flat-button color="primary" [disabled]="signupForm.invalid">Sign up</button>
-  </form>
+        <button mat-flat-button color="primary" [disabled]="signupForm.invalid" fxFlex="40" fxFlexOffset="20">
+          Sign up
+        </button>
+      </div>
+      
+    </form>
+
+    <footer>
+      DevPuzzle. All rights reserved. &copy;
+    </footer>
+  </div>
+
 </div>
