--- a/client/src/app/components/auth/signup/signup.component.scss
+++ b/client/src/app/components/auth/signup/signup.component.scss
@@ -1,10 +1,36 @@
-.form-wrapper{
-  display: flex;
-  justify-content: center;
+.image-wrapper{
+  height: 100vh;
+  background: url('../../../../assets/img/start-page.jpg');
+  background-size: cover;
+  position: relative;
 
-  .form{
-    display: flex;
-    flex-direction: column;
-    width: 30%;
+  .motto{
+    position: absolute;
+    background: rgba(0, 0, 0, 0.6);
+    bottom: 0;
+    font-size: 40px;
+    font-weight: bold;
+    color: #ffffff;
+    width: 100%;
+    padding: 0 20px;
+  }
+}
+
+.right-panel{
+  height: 100vh;
+  padding: 10px;
+  position: relative;
+
+  .signin-button{
+    margin-bottom: 10px;
+  }
+
+  footer{
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    text-align: center;
+    font-size: 16px;
   }
 }
