--- a/client/src/app/components/auth/signin/signin.component.html
+++ b/client/src/app/components/auth/signin/signin.component.html
@@ -2,15 +2,16 @@
 
   <mat-form-field>
     <input matInput formControlName="email" type="email" placeholder="Email" required>
+
   </mat-form-field>
 
   <mat-form-field>
     <input matInput formControlName="password" type="password" placeholder="Password" required>
   </mat-form-field>
 
-
   <button mat-flat-button color="primary" [disabled]="signinForm.invalid">
     Sign in
   </button>
+  <mat-error *ngIf="!isLoginData">Login or password are incorrect.</mat-error>
 
 </form>
