--- a/client/src/app/components/auth/signup/signup.component.html
+++ b/client/src/app/components/auth/signup/signup.component.html
@@ -1,16 +1,22 @@
 <form [formGroup]="signupForm" (ngSubmit)="onSignUp()" fxLayout="column">
-  
+
   <mat-form-field>
-    <input matInput formControlName="email" type="email" placeholder="Email" required>
+    <input matInput formControlName="email" type="email" placeholder="Email" required email>
   </mat-form-field>
 
   <mat-form-field>
     <input matInput formControlName="password" type="password" placeholder="Password" required>
   </mat-form-field>
 
-  
+  <mat-form-field>
+      <input matInput formControlName="company_name" type="text" placeholder="Company name" required>
+  </mat-form-field>
+
+
+
   <button mat-flat-button color="primary" [disabled]="signupForm.invalid">
     Sign up
   </button>
-    
+  <mat-error *ngFor="let error of errorMessage">{{ error.message }}</mat-error>
+
 </form>
