--- a/client/src/app/components/main-layout/main-layout.component.html
+++ b/client/src/app/components/main-layout/main-layout.component.html
@@ -1,6 +1,6 @@
-<mat-toolbar color="primary">
-  
-</mat-toolbar>
+<app-header></app-header>
 
 <!-- Main content goes here -->
-<router-outlet></router-outlet>
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
