--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -2,3 +2,6 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: 'Open Sans Condensed', Roboto, "Helvetica Neue", sans-serif; }
+.container{
+  padding: 1rem;
+}
