--- a/client/src/app/components/employee/employee-list/employee-list.component.scss
+++ b/client/src/app/components/employee/employee-list/employee-list.component.scss
@@ -1,5 +1,6 @@
 .employee-list {
   width: 35%;
+  margin-bottom: 1rem;
   .mat-card {
     padding: 0;
     .mat-card-header {
@@ -16,6 +17,13 @@
         font-size: 16px;
         font-weight: 400;
       }
+    }
+    .list-item-link{
+      text-decoration: none;
+    }
+    .list-item:hover{
+      cursor: pointer;
+      background: rgba(0,0,0,.08);
     }
   }
 }
