fixed conflicts, added routing

--- a/client/src/app/components/employee/employee.component.html
+++ b/client/src/app/components/employee/employee.component.html
@@ -10,7 +10,10 @@
         <app-employee-list></app-employee-list>
     </div>
     <div fxFlex="65" class="sec2" fxFlex="65">
-        <app-employee-info></app-employee-info>
+      <router-outlet></router-outlet>
     </div>
+    <!-- <div fxFlex="65" class="sec2" fxFlex="65">
+        <app-employee-info></app-employee-info>
+    </div> -->
   </div>
 </div>
