--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -5,3 +5,12 @@ html, body { height: 100%; }
   padding: 1rem;
 }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+h1{
+  font-size: 48px;
+}
+
+.wrapper{
+  max-width: 1140px;
+  width: 100%;
+  margin: 0 auto;
+}
