fixes for background

--- a/client/src/app/components/auth/auth/auth.component.html
+++ b/client/src/app/components/auth/auth/auth.component.html
@@ -5,7 +5,7 @@
   </div>
   
   <div class="main">
-    <mat-toolbar color="primary">
+    <mat-toolbar color="primary" class="toolbar">
       <mat-toolbar-row class="header content-wrapper">
         <div>
           DevPuzzle
