added signup modal

--- a/client/src/app/components/main/main/main.component.html
+++ b/client/src/app/components/main/main/main.component.html
@@ -14,7 +14,7 @@
           <a mat-button (click)="onScroll(about)">About</a>
           <a mat-button (click)="onScroll(contacts)">Contact us</a>
           <button mat-button>Signin</button>
-          <button mat-button>Signup</button>
+          <button mat-button (click)="onShowSignupModal()">Signup</button>
         </div>
       </mat-toolbar-row>
     </mat-toolbar>
