--- a/client/src/app/components/main/signup/signup.component.html
+++ b/client/src/app/components/main/signup/signup.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="signupForm" (ngSubmit)="onSignUp()" fxLayout="column">
+<form [formGroup]="signupForm" (ngSubmit)="onSignUp()" fxLayout="column" class="signup-form">
 
   <mat-form-field>
     <input matInput formControlName="email" type="email" placeholder="Email" required email>
