--- a/client/src/app/components/main/main/main.component.html
+++ b/client/src/app/components/main/main/main.component.html
@@ -1,9 +1,9 @@
 <div fxLayout="row" class="background mat-primary">
-  
+
   <div class="phone-image-wrapper">
     <img src="assets/img/starting-page-phone.png" alt="" class="phone-image">
   </div>
-  
+
   <div class="main">
     <mat-toolbar color="primary" class="toolbar">
       <mat-toolbar-row class="header content-wrapper">
@@ -13,12 +13,12 @@
         <div>
           <a mat-button (click)="onScroll(about)">About</a>
           <a mat-button (click)="onScroll(contacts)">Contact us</a>
-          <button mat-button>Signin</button>
+          <button mat-button (click)="onShowSigninModal()">Signin</button>
           <button mat-button (click)="onShowSignupModal()">Signup</button>
         </div>
       </mat-toolbar-row>
     </mat-toolbar>
-    
+
     <div class="banner-wrapper">
       <div class="banner content-wrapper">
         <div class="motto">
@@ -29,7 +29,7 @@
       <particles [style]="style" [width]="width" [height]="height" [params]="params"></particles>
       <div class="canvas-overlay"></div>
     </div>
-    
+
     <div class="wrapper">
       <div #about style="margin-top: 1000px">
         about us
@@ -38,13 +38,13 @@
         contacts
       </div>
     </div>
-    
+
   </div>
 </div>
 
-  
 
-  
+
+
   <!-- <mat-card class="auth-panel">
     <mat-tab-group>
       <mat-tab label="Signin">
