--- a/client/src/app/components/main/signin/signin.component.html
+++ b/client/src/app/components/main/signin/signin.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="signinForm" (ngSubmit)="onSignIn()" fxLayout="column">
+<form [formGroup]="signinForm" (ngSubmit)="onSignIn()" fxLayout="column" class="signin-form">
 
   <mat-form-field>
     <input matInput formControlName="email" type="email" placeholder="Email" required>
