--- a/client/src/app/components/main-layout/main-layout.component.html
+++ b/client/src/app/components/main-layout/main-layout.component.html
@@ -1,6 +1,6 @@
 <app-header></app-header>
 
 <!-- Main content goes here -->
-<div class="container">
+<div class="wrapper">
   <router-outlet></router-outlet>
 </div>
