--- a/client/src/app/components/main/main/main.component.scss
+++ b/client/src/app/components/main/main/main.component.scss
@@ -22,6 +22,18 @@ $primary: #3f51b5;
       justify-content: space-between;
       padding: 0;
       margin: 0 auto;
+      .signin-button {
+        background: #40b93b;
+        margin-left: 5px;
+      }
+      .signup-button {
+        background: #f7b71a;
+        margin-left: 5px;
+      }
+      .logout-button {
+        background: #d63245;
+        margin-left: 5px;
+      }
     }
 
     .banner-wrapper{
