--- a/client/src/app/components/main/signin/signin.component.html
+++ b/client/src/app/components/main/signin/signin.component.html
@@ -24,5 +24,5 @@
     Sign in
   </button>
   <mat-error *ngIf="!isLoginData">Login or password are incorrect.</mat-error>
-
+  <i (click)="closeSignin()" class="fas fa-times"></i>
 </form>
