--- a/client/src/app/components/employee/employee-info/employee-info.component.html
+++ b/client/src/app/components/employee/employee-info/employee-info.component.html
@@ -3,29 +3,36 @@
     <mat-card-header>
       <mat-card-title>Employee info</mat-card-title>
     </mat-card-header>
-    <form class="employee-info-form">
+    <form [formGroup]="employeeForm" class="employee-info-form">
       <mat-form-field class="company">
           <input matInput placeholder="Company" disabled value="DevPuzzle">
       </mat-form-field>
 
       <mat-form-field>
-          <input matInput placeholder="First name" [formControl]="" required>
-          <mat-error *ngIf=""></mat-error>
+          <input matInput placeholder="First name" formControlName="name" required>
+          <mat-error *ngIf="employeeForm.get('name').hasError('required')">
+            {{requiredFieldError}}
+          </mat-error>
       </mat-form-field>
 
       <mat-form-field>
-          <input matInput placeholder="Last name" [formControl]="" required>
-          <mat-error *ngIf=""></mat-error>
+          <input matInput placeholder="Last name" formControlName="last-name" required>
+          <mat-error *ngIf="employeeForm.get('last-name').hasError('required')">
+            {{requiredFieldError}}
+          </mat-error>
       </mat-form-field>
 
       <mat-form-field>
-          <input matInput placeholder="E-mail" [formControl]="" required>
-          <mat-error *ngIf=""></mat-error>
+          <input matInput placeholder="E-mail" formControlName="email" required>
+          <mat-error *ngIf="employeeForm.get('email').hasError('required')">
+            {{requiredFieldError}}
+          </mat-error>
       </mat-form-field>
 
       <mat-form-field class="skills">
           <textarea matInput placeholder="Skills"></textarea>
       </mat-form-field>
+      <button mat-raised-button color="primary" [disabled]="employeeForm.invalid">Save</button>
     </form>
   </mat-card>
 </div>
