--- a/client/src/app/components/employee/employee-info/employee-info.component.html
+++ b/client/src/app/components/employee/employee-info/employee-info.component.html
@@ -5,7 +5,7 @@
     </mat-card-header>
     <form [formGroup]="employeeForm" class="employee-info-form">
       <mat-form-field class="company">
-          <input matInput placeholder="Company" disabled value="DevPuzzle">
+          <input matInput placeholder="Company" disabled>
       </mat-form-field>
 
       <mat-form-field>
@@ -16,8 +16,8 @@
       </mat-form-field>
 
       <mat-form-field>
-          <input matInput placeholder="Last name" formControlName="last-name" required>
-          <mat-error *ngIf="employeeForm.get('last-name').hasError('required')">
+          <input matInput placeholder="Last name" formControlName="last_name" required>
+          <mat-error *ngIf="employeeForm.get('last_name').hasError('required')">
             {{requiredFieldError}}
           </mat-error>
       </mat-form-field>
@@ -30,7 +30,7 @@
       </mat-form-field>
 
       <mat-form-field class="skills">
-          <textarea matInput placeholder="Skills"></textarea>
+          <textarea matInput placeholder="Skills" formControlName="skills"></textarea>
       </mat-form-field>
       <button mat-raised-button color="primary" [disabled]="employeeForm.invalid">Save</button>
     </form>
