--- a/client/src/app/components/employee/employee-info/employee-info.component.scss
+++ b/client/src/app/components/employee/employee-info/employee-info.component.scss
@@ -1,5 +1,5 @@
 .employee-info {
-  margin-left: 1rem;
+  margin-top: 1rem;
   @media(max-width: 599px){
     margin-top: 1rem;
     margin-left: 0;
