--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -1,11 +1,26 @@
 <mat-toolbar color="primary">
-  <mat-toolbar-row class="wrapper">
-  <a
-    *ngFor="let link of links" mat-button
-    [routerLink]="link.link" routerLinkActive="active"
-    >
-    {{link.label}}
-    <!-- <i [class]="link.icon" class="nav-icon"></i> -->
-  </a>
+  <mat-toolbar-row class="header">
+    <div class="left-panel">
+      <a
+        *ngFor="let link of links" mat-button
+        [routerLink]="link.link" routerLinkActive="active"
+        >
+        {{link.label}}
+        <!-- <i [class]="link.icon" class="nav-icon"></i> -->
+      </a>
+    </div>
+    
+    <div class="right-panel">
+      <div class="name-company">
+        <ng-container *ngIf="user">
+          <p class="user-name">
+            Welcome, {{user.name}}!
+          </p>
+          <span class="text-gray company">({{user.company_name}})</span>
+        </ng-container> 
+      </div>
+      
+      <button mat-button (click)="onSignout()">Sign out</button>
+    </div>
 </mat-toolbar-row>
 </mat-toolbar>
