--- a/client/src/app/components/header/header.component.scss
+++ b/client/src/app/components/header/header.component.scss
@@ -1,7 +1,33 @@
+.mat-toolbar-row{
+  justify-content: space-between;
+  position: relative;
+}
 .active{
   border-bottom: 2px solid #ffffff;
   border-radius: 0;
 }
 .nav-icon{
   font-size: 1rem;
+}
+.right-panel{
+  display: flex;
+  align-items: center;
+  .name-company{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .user-name{
+    font-size: 14px;
+    line-height: 0;
+  }
+  
+  .company{
+    line-height: 0;
+  }
+}
+.text-gray{
+  color: #c2c4c6;
+  font-size: 10px;
 }
