start updating employee

--- a/client/src/app/components/employee/employee-info/employee-info.component.html
+++ b/client/src/app/components/employee/employee-info/employee-info.component.html
@@ -5,7 +5,7 @@
       </mat-card-header>
       <form [formGroup]="employeeForm" (ngSubmit)="onSave()" class="employee-info-form">
         <mat-form-field class="company">
-            <input matInput [placeholder]="company" disabled>
+            <input matInput [placeholder]="user?.company_name" disabled>
         </mat-form-field>
 
         <mat-form-field>
