--- a/client/src/app/components/employee/employee-info/employee-info.component.html
+++ b/client/src/app/components/employee/employee-info/employee-info.component.html
@@ -2,6 +2,7 @@
     <mat-card>
       <mat-card-header>
         <mat-card-title>Employee info</mat-card-title>
+        <i class="far fa-id-card"></i>
       </mat-card-header>
       <form [formGroup]="employeeForm" (ngSubmit)="onSave()" class="employee-info-form">
         <mat-form-field class="company">
