--- a/client/src/app/components/employee/employee-list/employee-list.component.html
+++ b/client/src/app/components/employee/employee-list/employee-list.component.html
@@ -2,6 +2,7 @@
   <mat-card>
     <mat-card-header>
       <mat-card-title>Employee list</mat-card-title>
+      <i class="fas fa-code"></i>
     </mat-card-header>
       <mat-list>
         <ng-container *ngFor="let employee of employees">
