--- a/client/src/app/components/clients/client-list/client-list.component.html
+++ b/client/src/app/components/clients/client-list/client-list.component.html
@@ -1,12 +1,15 @@
 <div class="client-list">
   <mat-card>
     <mat-card-header>
-      <mat-card-title>Client list</mat-card-title>
+      <!-- <mat-card-title>Client list</mat-card-title>
+      <mat-card-title><i class="fas fa-users"></i></mat-card-title> -->
+        <mat-card-title>Client list</mat-card-title>
+        <i class="fas fa-users"></i>
     </mat-card-header>
       <mat-list>
-        <ng-container *ngFor="">
-          <a [routerLink]="" class="list-item-link">
-            <mat-list-item class="list-item"></mat-list-item>
+        <ng-container *ngFor="let client of clients">
+          <a [routerLink]="'edit/' + client._id" class="list-item-link">
+            <mat-list-item class="list-item">{{client?.name}} {{client?.last_name}}</mat-list-item>
             <mat-divider></mat-divider>
           </a>
         </ng-container>
