--- a/client/src/app/components/employee/employee-info/employee-info.component.scss
+++ b/client/src/app/components/employee/employee-info/employee-info.component.scss
@@ -10,11 +10,11 @@
       align-content: center;
       align-items: center;
       display: flex;
-      justify-content: start;
+      justify-content: space-between;
       height: 40px;
       padding: 8px 20px;
-      color: rgba(0,0,0,.54);
-      background: rgba(0,0,0,.03);
+      color: #fff;
+      background: #5c6bc0;
       .mat-card-title {
         margin-bottom: 0;
         font-size: 16px;
