--- a/client/src/app/components/clients/client-info/client-info.component.html
+++ b/client/src/app/components/clients/client-info/client-info.component.html
@@ -4,7 +4,7 @@
       <mat-card-title>Client info</mat-card-title>
       <i class="far fa-id-card"></i>
     </mat-card-header>
-    <form [formGroup]="clientForm"  class="client-info-form">
+    <form [formGroup]="clientForm"  (ngSubmit)="onSave()" class="client-info-form">
       <mat-form-field>
           <input matInput placeholder="Name" formControlName="name" required>
           <mat-error *ngIf="clientForm.get('name').hasError('required')">
@@ -24,15 +24,16 @@
       </mat-form-field>
 
       <mat-form-field>
-          <input matInput placeholder="Skype" formControlName="skype" required>
+          <input matInput placeholder="Skype" formControlName="skype">
       </mat-form-field>
 
       <mat-form-field>
-          <textarea matInput placeholder="Comment" formControlName="comment" required></textarea>
+          <textarea matInput placeholder="Comment" formControlName="comment"></textarea>
       </mat-form-field>
 
       <button mat-raised-button color="primary" [disabled]="clientForm.invalid">Save</button>
     </form>
+
   </mat-card>
 </div>
 
