--- a/client/src/app/components/clients/client-info/client-info.component.scss
+++ b/client/src/app/components/clients/client-info/client-info.component.scss
@@ -15,6 +15,12 @@
       padding: 8px 20px;
       color: #fff;
       background: #5c6bc0;
+      .closeInfo {
+        position: absolute;
+        right: 5px;
+        top: 2px;
+        font-size: 12px;
+      }
       .mat-card-title {
         margin-bottom: 0;
         font-size: 16px;
@@ -26,6 +32,10 @@
       mat-form-field {
         width: 100%;
       }
+    }
+    .buttons {
+      display: flex;
+      justify-content: space-between;
     }
   }
 }
