--- a/client/src/app/components/employee/employee-info/employee-info.component.scss
+++ b/client/src/app/components/employee/employee-info/employee-info.component.scss
@@ -15,6 +15,12 @@
       padding: 8px 20px;
       color: #fff;
       background: #5c6bc0;
+      .closeInfo {
+        position: absolute;
+        right: 5px;
+        top: 2px;
+        font-size: 12px;
+      }
       .mat-card-title {
         margin-bottom: 0;
         font-size: 16px;
@@ -28,6 +34,10 @@
       }
       .company {
         width: auto;
+      }
+      .buttons {
+        display: flex;
+        justify-content: space-between;
       }
     }
   }
