--- a/client/src/app/components/main/main/main.component.scss
+++ b/client/src/app/components/main/main/main.component.scss
@@ -22,6 +22,25 @@ $primary: #3f51b5;
       justify-content: space-between;
       padding: 0;
       margin: 0 auto;
+
+      .user-name{
+        font-size: 14px;
+        line-height: 0;
+        font-weight: 100;
+      }
+      .company{
+        line-height: 0;
+        font-weight: 100;
+        color: #c2c4c6;
+        font-size: 10px;
+      }
+      .sign-out {
+        display: initial;
+        width: max-content;
+        font-size: 14px;
+        margin-left: 9px;
+        cursor: pointer;
+      }
       .signin-button {
         background: #40b93b;
         margin-left: 5px;
