add project field for client info

--- a/client/src/app/components/clients/client-info/client-info.component.html
+++ b/client/src/app/components/clients/client-info/client-info.component.html
@@ -37,7 +37,75 @@
         <a (click)="onDelete()" mat-raised-button color="warn" *ngIf="ClientId">Delete</a>
       </div>
     </form>
+    <mat-divider></mat-divider>
+    <div *ngIf="ClientId" class="contact-made">
+      <h2>Projects</h2>
+      <mat-accordion>
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Ecommerce Electronic store
+            </mat-panel-title>
+            <mat-panel-description>
+                <span class="finished">finished&nbsp;<i class="fas fa-check"></i></span>
+            </mat-panel-description>
+          </mat-expansion-panel-header>
 
+          <mat-list>
+              <mat-list-item><span class="project-field">Link:&nbsp;</span><a href="https://angular.io/">angular.io</a></mat-list-item>
+              <mat-divider></mat-divider>
+              <mat-list-item><span class="project-field">Platform:&nbsp;</span>UpWork</mat-list-item>
+              <mat-divider></mat-divider>
+              <mat-list-item><span class="project-field">Employe:&nbsp;</span>Smith</mat-list-item>
+              <mat-divider></mat-divider>
+              <mat-list-item><span class="project-field">Notification:&nbsp;</span>Some notifcitaion</mat-list-item>
+          </mat-list>
+
+        </mat-expansion-panel>
+        <mat-expansion-panel>
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                Ecommerce Electronic store
+              </mat-panel-title>
+              <mat-panel-description>
+                  <span class="indev">in dev&nbsp;<i class="fas fa-spinner"></i></span>
+              </mat-panel-description>
+            </mat-expansion-panel-header>
+
+            <mat-list>
+                <mat-list-item><span class="project-field">Link:&nbsp;</span><a href="https://angular.io/">angular.io</a></mat-list-item>
+                <mat-divider></mat-divider>
+                <mat-list-item><span class="project-field">Platform:&nbsp;</span>UpWork</mat-list-item>
+                <mat-divider></mat-divider>
+                <mat-list-item><span class="project-field">Employe:&nbsp;</span>Smith</mat-list-item>
+                <mat-divider></mat-divider>
+                <mat-list-item><span class="project-field">Notification:&nbsp;</span>Some notifcitaion</mat-list-item>
+            </mat-list>
+
+          </mat-expansion-panel>
+          <mat-expansion-panel>
+              <mat-expansion-panel-header>
+                <mat-panel-title>
+                  Web Site
+                </mat-panel-title>
+                <mat-panel-description>
+                    <span class="discussed">discussed&nbsp;<i class="fas fa-comments"></i></span>
+                </mat-panel-description>
+              </mat-expansion-panel-header>
+
+              <mat-list>
+                  <mat-list-item><span class="project-field">Link:&nbsp;</span><a href="https://angular.io/">angular.io</a></mat-list-item>
+                  <mat-divider></mat-divider>
+                  <mat-list-item><span class="project-field">Platform:&nbsp;</span>UpWork</mat-list-item>
+                  <mat-divider></mat-divider>
+                  <mat-list-item><span class="project-field">Employe:&nbsp;</span>Smith</mat-list-item>
+                  <mat-divider></mat-divider>
+                  <mat-list-item><span class="project-field">Notification:&nbsp;</span>Some notifcitaion</mat-list-item>
+              </mat-list>
+
+            </mat-expansion-panel>
+      </mat-accordion>
+    </div>
   </mat-card>
 </div>
 
