--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -20,8 +20,7 @@
         </ng-container>
       </div>
 
-      <!-- <button matTooltip="Sign Out" mat-button (click)="onSignout()" class="sign-out"><i class="fas fa-sign-out-alt"></i></button> -->
-      <div matTooltip="Sign Out"  matTooltipPosition="right" mat-button (click)="onSignout()" class="sign-out"><i class="fas fa-sign-out-alt"></i></div>
+      <a href="/" matTooltip="Sign Out"  matTooltipPosition="right" mat-button (click)="onSignout()" class="sign-out"><i class="fas fa-sign-out-alt"></i></a>
 
     </div>
 </mat-toolbar-row>
