--- a/client/src/app/components/main/main/main.component.html
+++ b/client/src/app/components/main/main/main.component.html
@@ -13,6 +13,7 @@
         <div>
           <a mat-button (click)="onScroll(about)">About</a>
           <a mat-button (click)="onScroll(contacts)">Contact us</a>
+          <!-- <a>{{sign}}</a> -->
           <ng-container *ngIf="sign">
             <a class="user-name">Welcome, {{user?.name}}!</a>
             <div matTooltip="Sign Out"  matTooltipPosition="right" mat-button (click)="onSignout()" class="sign-out"><i class="fas fa-sign-out-alt"></i></div>
