--- a/client/src/app/components/header/header.component.scss
+++ b/client/src/app/components/header/header.component.scss
@@ -27,10 +27,10 @@
   .company{
     line-height: 0;
     font-weight: 100;
+    margin-bottom: 6px;
   }
   .sign-out {
     font-size: 14px;
-    margin-left: 25px;
     cursor: pointer;
   }
 }
