--- a/client/src/app/components/header/header.component.scss
+++ b/client/src/app/components/header/header.component.scss
@@ -9,6 +9,11 @@
 .nav-icon{
   font-size: 1rem;
 }
+.left-panel {
+  .logo {
+    height: 64px;
+  }
+}
 .right-panel{
   display: flex;
   align-items: center;
@@ -31,6 +36,8 @@
   }
   .sign-out {
     font-size: 14px;
+    color: #fff;
+    margin-left: 15px;
     cursor: pointer;
   }
 }
