--- a/client/src/app/components/clients/client-info/client-info.component.scss
+++ b/client/src/app/components/clients/client-info/client-info.component.scss
@@ -20,6 +20,7 @@
         right: 5px;
         top: 2px;
         font-size: 12px;
+        cursor: pointer;
       }
       .mat-card-title {
         margin-bottom: 0;
