--- a/client/src/app/components/main/main/main.component.scss
+++ b/client/src/app/components/main/main/main.component.scss
@@ -23,6 +23,11 @@ $primary: #3f51b5;
       padding: 0;
       margin: 0 auto;
 
+      .logo {
+        height: 64px;
+        width: auto;
+      }
+
       .user-name{
         font-size: 14px;
         line-height: 0;
